methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def move (nbPas : Int, versLAvant: Boolean) : {if (versLAvant) {for (i <- 1 to nbPas){avance()}}
                                               ^